fix: update User and Address models to use auto-incrementing IDs

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-1IF2P61\\LOCALHOST;Database=AEC;User=sa;Password=teste@123;Integrated Security=false;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
